# realtime-military-vehicle-detection

./: .gitignore  CMakeLists.txt  README.md  check_threads.py  class_names.txt  config.json  dataset-generator.py  dino_annotate.py  export_model.py  export_modelV5.py  export_modelV8.py  guardian-sight.py  guardian_config.json  guardian_sight.py  image_utils.cpp  image_utils.h  mjpeg_streamer.py  requirements.txt  utils.py
cpp/: CMakeLists.txt  main.cpp
model_data/: class_names.txt
python/: requirements.txt
src/cpp/: CMakeLists.txt  config.cpp  config.h  file_utils.cpp  file_utils.h  guardian_lense.cpp  image_utils.cpp  image_utils.h  image_utils_legacy.cpp  image_utils_legacy.h  main.cpp
src/python/: dino_annotate.py  utils.py
